@@ -22,4 +22,4 @@
         }
     },
     "parent": "crafted_tweaks:root"
-} e
+}
