@@ -1,7 +1,7 @@
 {
     "type": "minecraft:stonecutting",
     "ingredient": {
-        "tag": "crafted_tweaks:variants/birch_plank_variants"
+        "tag": "crafted_tweaks:logs/birch"
     },
     "result": "minecraft:birch_planks",
     "count": 1
