@@ -1,7 +1,7 @@
 {
     "type": "minecraft:stonecutting",
     "ingredient": {
-        "tag": "crafted_tweaks:variants/jungle_plank_variants"
+        "tag": "crafted_tweaks:logs/jungle"
     },
     "result": "minecraft:jungle_planks",
     "count": 1
