@@ -1,0 +1,8 @@
+{
+    "type": "minecraft:stonecutting",
+    "ingredient": {
+        "tag": "crafted_tweaks:logs/mangrove"
+    },
+    "result": "minecraft:mangrove_planks",
+    "count": 1
+}
