@@ -1,0 +1,8 @@
+{
+    "values": [
+        "minecraft:acacia_log",
+        "minecraft:acacia_wood",
+        "minecraft:stripped_acacia_log",
+        "minecraft:stripped_acacia_wood"
+    ]
+}
