@@ -1,0 +1,8 @@
+{
+    "values": [
+        "minecraft:birch_log",
+        "minecraft:birch_wood",
+        "minecraft:stripped_birch_log",
+        "minecraft:stripped_birch_wood"
+    ]
+}
