@@ -1,0 +1,8 @@
+{
+    "values": [
+        "minecraft:cherry_log",
+        "minecraft:cherry_wood",
+        "minecraft:stripped_cherry_log",
+        "minecraft:stripped_cherry_wood"
+    ]
+}
