@@ -1,0 +1,8 @@
+{
+    "values": [
+        "minecraft:crimson_stem",
+        "minecraft:crimson_hyphae",
+        "minecraft:stripped_crimson_stem",
+        "minecraft:stripped_crimson_hyphae"
+    ]
+}
