@@ -1,0 +1,8 @@
+{
+    "values": [
+        "minecraft:dark_oak_log",
+        "minecraft:dark_oak_wood",
+        "minecraft:stripped_dark_oak_log",
+        "minecraft:stripped_dark_oak_wood"
+    ]
+}
