@@ -1,0 +1,8 @@
+{
+    "values": [
+        "minecraft:mangrove_log",
+        "minecraft:mangrove_wood",
+        "minecraft:stripped_mangrove_log",
+        "minecraft:stripped_mangrove_wood"
+    ]
+}
