@@ -1,0 +1,8 @@
+{
+    "values": [
+        "minecraft:oak_log",
+        "minecraft:oak_wood",
+        "minecraft:stripped_oak_log",
+        "minecraft:stripped_oak_wood"
+    ]
+}
