@@ -1,0 +1,8 @@
+{
+    "values": [
+        "minecraft:spruce_log",
+        "minecraft:spruce_wood",
+        "minecraft:stripped_spruce_log",
+        "minecraft:stripped_spruce_wood"
+    ]
+}
