@@ -1,0 +1,8 @@
+{
+    "values": [
+        "minecraft:warped_stem",
+        "minecraft:warped_hyphae",
+        "minecraft:stripped_warped_stem",
+        "minecraft:stripped_warped_hyphae"
+    ]
+}
