@@ -1,0 +1,12 @@
+{
+    "values": [
+        "minecraft:bamboo_button",
+        "minecraft:bamboo_door",
+        "minecraft:bamboo_fence_gate",
+        "minecraft:bamboo_fence",
+        "minecraft:bamboo_pressure_plate",
+        "minecraft:bamboo_slab",
+        "minecraft:bamboo_stairs",
+        "minecraft:bamboo_trapdoor"
+    ]
+}
