@@ -1,0 +1,12 @@
+{
+    "values": [
+        "minecraft:crimson_button",
+        "minecraft:crimson_door",
+        "minecraft:crimson_fence_gate",
+        "minecraft:crimson_fence",
+        "minecraft:crimson_pressure_plate",
+        "minecraft:crimson_slab",
+        "minecraft:crimson_stairs",
+        "minecraft:crimson_trapdoor"
+    ]
+}
